--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <section id="section2" class="cd-section">
 	<div class="content-wrapper">
 		<h2>Who I am</h2>
-		<p>I'm a relentless dreamer and a passionate entrepreneur. Ever since I was a child, I have loved building things: from Legos to custom motorbikes and eventually companies. I have a sound business vision which I mix with a solid decision framework and a pragmatic approach to everyday business challenges.</p>
+		<p>I'm a relentless dreamer and a passionate entrepreneur. Ever since I was a child, I have loved building things: from Legos to custom motorbikes and eventually companies. I have a sound business vision which I mix with a solid decision framework and a pragmatic approach to face everyday business challenges.</p>
 	</div>
 </section><!-- cd-section -->
 
